--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/launcher_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/launcher_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PDFPro"
-        tools:targetApi="31">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        tools:targetApi="31" >
         <activity
-            android:name=".MainScreen"
-            android:exported="false"
-            android:label="@string/title_activity_main_screen"
-            android:theme="@style/Theme.PDFPro" />
-        <activity
-            android:name=".Upload"
-            android:exported="false"
-            android:label="@string/title_activity_upload"
-            android:theme="@style/Theme.PDFPro" />
-
-        <activity
-            android:name=".OnboardActivity"
+            android:name=".Navigation"
             android:exported="true"
-            android:theme="@style/Theme.PDFPro">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
