--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/launcher_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PDFPro"
-        tools:targetApi="31" >
+        tools:targetApi="31"
+        >
         <activity
             android:name=".Navigation"
             android:exported="true"
