--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/launcher_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PDFPro"
-        android:localeConfig="@xml/locale_config"
+        android:theme="@style/Theme"
         tools:targetApi="34"
         >
         <activity
             android:name=".Navigation"
             android:exported="true"
+            android:localeConfig="@xml/locales_config"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
