--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 # rewrite byte code to androidX libraries by enabling jetifier ex: android pdf viewer support
 android.enableJetifier=true
+org.gradle.configuration-cache=true
