--- a/.github/workflows/app_build_and_test.yml
+++ b/.github/workflows/app_build_and_test.yml
@@ -1,47 +1,63 @@
 # name: UI test in android emulator CI
 
-# on:
-#   push:
-#     branches: [ master ]
-#   pull_request:
-#     branches:
-#       - master
-#       - kotlin-conversion
+ on:
+   push:
+     branches: [ dev ]
+ jobs:
+   build:
+     runs-on: ubuntu-latest
+     timeout-minutes: 30
+     steps:
+       - uses: actions/checkout@v4
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     timeout-minutes: 30
-#     steps:
-#       - uses: actions/checkout@v4
+       - name: set up JDK
+         uses: actions/setup-java@v1
+         with:
+           distribution: 'zulu'
+           java-version: 17
+       - name: Grant execute permissions for gradlew
+         run: chmod +x ./gradlew
 
-#       - name: set up JDK 17
-#         uses: actions/setup-java@v4
-#         with:
-#           distribution: 'zulu'
-#           java-version: 17
+       - name: Update Gradle wrapper to 8.7
+         run: ./gradlew wrapper --gradle-version=8.7
+
+       - name: Cache Gradle packages
+         uses: actions/cache@v2
+         with:
+           path: |
+             ~/.gradle/caches
+             ~/.gradle/wrapper
+           key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+           restore-keys: |
+             gradle-${{ runner.os }}-
 
 #       - name: Validate Gradle wrapper
 #         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
 
-#       - name: Build with Gradle
-#         run: ./gradlew build
+       - name: Build with Gradle
+         run: ./gradlew build --stacktrace
+
+       - name: Run all tests
+         run: ./gradlew test --stacktrace
 
 #   unit-tests:
 #     runs-on: ubuntu-latest
 #     timeout-minutes: 30
 #     steps:
 #       - uses: actions/checkout@v4
-
+#
 #       - name: set up JDK 17
 #         uses: actions/setup-java@v4
 #         with:
 #           distribution: 'zulu'
-#           java-version: 17
-
+#           java-version: 8
+#
+#       - name: Grant execute permissions for gradlew
+#         run: chmod +x ./gradlew
+#
 #       - name: Validate Gradle wrapper
 #         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-
+#
 #       - name: Run all checks
 #         run: ./gradlew check --stacktrace
 
