--- a/.github/workflows/app_build_and_test.yml
+++ b/.github/workflows/app_build_and_test.yml
@@ -31,14 +31,11 @@
            restore-keys: |
              gradle-${{ runner.os }}-
 
-#       - name: Validate Gradle wrapper
-#         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-
        - name: Build with Gradle
          run: ./gradlew build --stacktrace
 
        - name: Run all tests
-         run: ./gradlew test --stacktrace
+         run: ./gradlew clean testDebugUnitTest
 
 #   unit-tests:
 #     runs-on: ubuntu-latest
