--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.5.0"
+agp = "8.5.1"
 androidPdfViewer = "3.2.0-beta.1"
 coilCompose = "2.4.0"
 hiltAndroid = "2.51.1"
@@ -7,25 +7,24 @@ hiltNavigationCompose = "1.2.0"
 kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-kotlinxCoroutinesCore = "1.7.3"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+kotlinxCoroutinesCore = "1.9.0-RC"
 kotlinxCoroutinesTest = "1.9.0-RC"
-lifecycleRuntimeKtx = "2.8.2"
-activityCompose = "1.9.0"
+lifecycleRuntimeKtx = "2.8.4"
+activityCompose = "1.9.1"
 composeBom = "2024.06.00"
-mockitoInline = "5.2.0"
-mockitoInlineVersion = "2.13.0"
-mockitoKotlin = "4.1.0"
+mockitoInlineVersion = "5.2.0"
+mockitoKotlin = "5.4.0"
 navigationCompose = "2.7.7"
 pdfboxAndroid = "2.0.27.0"
-playServicesAds = "23.1.0"
+playServicesAds = "23.2.0"
 appcompat = "1.7.0"
 constraintlayout = "2.1.4"
-lifecycleLivedataKtx = "2.8.2"
-lifecycleViewmodelKtx = "2.8.2"
+lifecycleLivedataKtx = "2.8.4"
+lifecycleViewmodelKtx = "2.8.4"
 material = "1.12.0"
-fragmentKtx = "1.8.0"
+fragmentKtx = "1.8.2"
 powermockApiMockito = "1.4.12"
 powermockModuleJunit4 = "1.6.2"
 reorderableVersion = "0.9.6"
