--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,22 +14,21 @@ kotlinxCoroutinesTest = "1.9.0-RC"
 lifecycleRuntimeKtx = "2.8.4"
 activityCompose = "1.9.1"
 composeBom = "2024.06.00"
-mockitoInlineVersion = "5.2.0"
-mockitoKotlin = "5.4.0"
+mockitoInlineVersion = "2.13.0"
+# Do not upgrade mockito kotlin
+mockitoKotlin = "4.1.0"
 navigationCompose = "2.7.7"
 pdfboxAndroid = "2.0.27.0"
 playServicesAds = "23.2.0"
 appcompat = "1.7.0"
 constraintlayout = "2.1.4"
-lifecycleLivedataKtx = "2.8.4"
 lifecycleViewmodelKtx = "2.8.4"
-material = "1.12.0"
 fragmentKtx = "1.8.2"
 playServicesMlkitDocumentScannerVersion = "16.0.0-beta1"
 powermockApiMockito = "1.4.12"
 powermockModuleJunit4 = "1.6.2"
-reorderableVersion = "0.9.6"
 roomRuntime = "2.6.1"
+documentfile = "1.0.1"
 
 [libraries]
 android-pdf-viewer = { module = "com.github.mhiew:android-pdf-viewer", version.ref = "androidPdfViewer" }
@@ -64,13 +63,11 @@ pdfbox-android = { module = "com.tom-roush:pdfbox-android", version.ref = "pdfbo
 play-services-ads = { module = "com.google.android.gms:play-services-ads", version.ref = "playServicesAds" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
-androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
 powermock-api-mockito = { module = "org.powermock:powermock-api-mockito", version.ref = "powermockApiMockito" }
 powermock-module-junit4 = { module = "org.powermock:powermock-module-junit4", version.ref = "powermockModuleJunit4" }
-reorderable = { module = "org.burnoutcrew.composereorderable:reorderable", version.ref = "reorderableVersion" }
+androidx-documentfile = { group = "androidx.documentfile", name = "documentfile", version.ref = "documentfile" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
