configure build-logic

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,9 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 # rewrite byte code to androidX libraries by enabling jetifier ex: android pdf viewer support
 android.enableJetifier=true
+
+# speed up the build
+org.gradle.caching=true
+org.gradle.parallel=true
 org.gradle.configuration-cache=true
+android.defaults.buildfeatures.buildconfig=true
