--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,7 @@ uiTooling = "1.6.8"
 jetbrainsKotlinJvm = "2.0.0"
 daggerHiltversion= "2.51.1"
 devtoolsKspVersion = "2.0.0-1.0.21"
+detekt= "1.23.6"
 # versions defined for included build logic
 androidGradlePlugin = "8.4.2"
 androidTools = "31.5.2"
@@ -111,6 +112,7 @@ serialization= { id = "org.jetbrains.kotlin.plugin.serialization", version.ref =
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "daggerHiltversion"}
 devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "devtoolsKspVersion"}
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref="detekt"}
 
 # Plugins defined by this project
 pdfpro-android-application = { id = "pdfpro.android.application", version = "unspecified" }
